--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # REACT_APP_BACKEND_URL=http://localhost:8000
-REACT_APP_BACKEND_URL=https://chatbook.onrender.com
+# REACT_APP_BACKEND_URL=https://chatbook.onrender.com
+REACT_APP_BACKEND_URL=https://chatbook.live
