--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-# REACT_APP_BACKEND_URL=http://localhost:8000
-# REACT_APP_BACKEND_URL=https://chatbook.onrender.com
-REACT_APP_BACKEND_URL=https://chatbook.live
+REACT_APP_BACKEND_URL=http://localhost:3001
+# REACT_APP_BACKEND_URL=https://chatbook.live
