--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.11.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +13,7 @@
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
+    "material-table": "^2.0.3",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,6 +25,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
+    "react-table": "^7.8.0",
+    "recharts": "^2.3.2",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "socket.io-client": "^4.5.4",
